# ImageViewer

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
app/: .eslintrc.json  main.js  package.json  preload.js
app/src/: index.html  renderer.js  styles.css
renderer/: image-loader.js  index.html  media-viewer.js  renderer.js  style.css
src/image_viewer/: indexer.py  menu.py
src/main/: directoryScanner.js  main.js  preferences.js  preload.js
tests/: test_indexer.py  test_menu.py
