[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "imageviewer"
version = "0.1.0"
description = "Local media indexer for fast browsing"
authors = [{name = "ImageViewer Team"}]
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]
